Add palette class functionality and refactor HTML and CSS

--- a/index.html
+++ b/index.html
@@ -16,33 +16,33 @@
         </div>
         <div class="color-palette-row-container">
           <div class="color-card">
-            <div class="color-box"></div>
+            <div class="color-box color-box-1"></div>
             <div class="color-details">
-              <h3> #ABC123 	🔒 </h3>
+              <h3 class="color-label-1"> #ABC123  🔒 </h3>
             </div>
           </div>
           <div class="color-card">
-            <div class="color-box"></div>
+            <div class="color-box color-box-2"></div>
             <div class="color-details">
-              <h3> #ABC123 🔓</h3>
+              <h3 class="color-label-2"> #ABC123 🔓</h3>
             </div>
           </div>
           <div class="color-card">
-            <div class="color-box"></div>
+            <div class="color-box color-box-3"></div>
             <div class="color-details">
-              <h3> #ABC123 </h3>
+              <h3 class="color-label-3"> #ABC123 </h3>
             </div>
           </div>
           <div class="color-card">
-            <div class="color-box"></div>
+            <div class="color-box color-box-4"></div>
             <div class="color-details">
-              <h3> #ABC123 </h3>
+              <h3 class="color-label-4"> #ABC123 </h3>
             </div>
           </div>
           <div class="color-card">
-            <div class="color-box"></div>
+            <div class="color-box color-box-5"></div>
             <div class="color-details">
-              <h3> #ABC123 </h3>
+              <h3 class="color-label-5"> #ABC123 </h3>
             </div>
           </div>
         </div>
