Add the displayPalette function to show saved palettes.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
         <div class="saved-palettes-title-container">
           <h2 class="saved-palettes-title">Saved Palettes</h2>
         </div>
+        <div class="saved-palettes-display-container">
+        </div>
       </div>
     </div>
     <script src="scripts.js"></script>
