--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <h2 class="saved-palettes-title">Saved Palettes</h2>
         </div>
         <div class="saved-palettes-display-container">
-
+          <!-- Insert innerHTML here -->
         </div>
       </div>
     </div>
