--- a/index.html
+++ b/index.html
@@ -65,5 +65,7 @@
       </div>
     </div>
     <script src="scripts.js"></script>
+    <!-- <script src="Color.js"></script>
+    <script src="Palette.js"></script> -->
   </body>
 </html>
