--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <h1 class="main-title">COLORANDOM</h1>
         </div>
         <div class="color-palette-row-container">
-          <div class="color-card">
+          <div class="color-card color-card-1">
             <div class="color-box color-box-1"></div>
             <div class="color-details">
               <h3 class="color-label-1"> #ABC123  🔒 </h3>
